# vlm_robot

./: README.md  kill_sim.sh
install/: local_setup.sh  setup.sh
install/vlm_description/share/ament_index/resource_index/package_run_dependencies/: vlm_description
install/vlm_description/share/vlm_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vlm_description/share/vlm_description/config/: bridge.yaml
install/vlm_description/share/vlm_description/rviz/: robot.rviz
install/vlm_description/share/vlm_description/urdf/: robot.gazebo.xacro
install/vlm_description/share/vlm_description/worlds/: world.sdf
install/vlm_navigation/lib/vlm_navigation/: object_goal_nav
install/vlm_navigation/share/vlm_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vlm_navigation/share/vlm_navigation/config/: nav2_params.yaml  slam_toolbox.yaml
install/vlm_navigation/share/vlm_navigation/launch/: nav2.launch.py  slam.launch.py
install/vlm_navigation/share/vlm_navigation/maps/: map.pgm
src/vlm_description/: CMakeLists.txt
src/vlm_description/launch/: gazebo.launch.py
src/vlm_description/urdf/: robot.urdf.xacro
src/vlm_navigation/: package.xml  setup.cfg  setup.py
src/vlm_navigation/launch/: bringup.launch.py
src/vlm_navigation/maps/: map.yaml
src/vlm_navigation/vlm_navigation/: vlm_detector.py
